Update conversion of string to long value